# Cobalt

./: .gitignore  Cobalt.sln  README.md
.github/workflows/: main.yml
Cobalt.Common.Communication/: CommunicationManager.cs  IEngineService.cs
Cobalt.Common.Communication/Messages/: ForegroundWindowSwitch.cs
Cobalt.Common.Data/: App.fs  Cobalt.Common.Data.fsproj  Entities.fs  Entity.fs  Repository.fs
Cobalt.Common.Data/Entities/: App.cs  AppUsage.cs  Entity.cs  SystemEvent.cs  Tag.cs
Cobalt.Common.Data/Migrations/: Meta.fs  Migration.fs  Migration1.fs  SQLiteMigration.fs  SQLiteMigrationV1.fs  SQliteMigrator.fs
Cobalt.Common.Transmission/: Cobalt.Common.Transmission.csproj  Constants.cs  EngineService.cs  IEngineService.cs  TransmissionClient.cs  TransmissionServer.cs
Cobalt.Common.Transmission/Messages/: AppSwitchMessage.cs
Cobalt.Common.Util/: Cobalt.Common.Util.fsproj
Cobalt.Common.Utils/: Cobalt.Common.Utils.csproj  CobaltException.cs  DateTimeOffsetEx.cs  Extensions.cs
Cobalt.Engine/: Cobalt.Engine.csproj  EngineWorker.cs  ForegroundWindowWatcher.cs  Program.cs  WindowInfo.cs
Cobalt.Engine/Watchers/: ForegroundWindowWatcher.cs  IdleWatcher.cs  Watcher.cs
Cobalt.Tests/: Cobalt.Tests.fsproj  Data.fs  Engine.fs  Tests.fs
src/Cobalt.Common.Communication/: Cobalt.Common.Communication.csproj  CommunicationManager.cs  IEngineService.cs  IUsageService.cs
src/Cobalt.Common.Communication/Messages/: ForegroundWindowSwitch.cs  UsageSwitch.cs
src/Cobalt.Common.Data/: Cobalt.Common.Data.fsproj  Entities.fs
src/Cobalt.Common.Data/Migrations/: Meta.fs  Migration1.fs  Migrator.fs
src/Cobalt.Common.Data/Repository/: DbRepository.fs  Materializers.fs
src/Cobalt.Common.Infrastructure/: Cobalt.Common.Infrastructure.csproj  HostRunner.cs  ServiceExtensions.cs
src/Cobalt.Common.Native/: Cobalt.Common.Native.csproj  Constants.cs  Ffi.cs  Functions.cs  NativeException.cs
src/Cobalt.Common.Utils/: Cobalt.Common.Utils.csproj  CobaltException.cs  DateTimeEx.cs  DateTimeOffsetEx.cs  Extensions.cs  NativeExtensions.cs
src/Cobalt.Engine/: Cobalt.Engine.csproj  EngineService.cs  EngineWorker.cs  Program.cs  Startup.cs
src/Cobalt.Engine/Extractors/: ProcessInfoExtractor.cs  WindowInfo.cs  WindowInfoExtractor.cs
src/Cobalt.Engine/Infos/: BasicWindowInfo.cs  ForegroundWindowSwitch.cs  ForegroundWindowUsage.cs  Process.cs  ProcessInfo.cs  Window.cs  WindowInfo.cs
src/Cobalt.Engine/Native/: Constants.cs  Utils.cs  Watchers.cs
src/Cobalt.Engine/Services/: EngineService.cs  UsageService.cs  WatchEngine.cs  WatcherService.cs
src/Cobalt.Engine/Watchers/: ForegroundWindowWatcher.cs  IdleWatcher.cs  Process.cs  SystemEventWatcher.cs  WatchLoop.cs  Watcher.cs  Window.cs  WindowClosedWatcher.cs
src/cobalt_engine/: Cargo.toml
src/cobalt_engine/src/: event_loop.rs  main.rs  utils.rs  winhook.rs
src/cobalt_engine/src/data/: entities.rs  repository.rs
src/engine/: Cargo.toml
src/engine/src/: main.rs
src/engine/src/watchers/: foreground_window.rs  mod.rs
src/engine/src/windows/: error.rs  event_loop.rs  hook.rs  mod.rs
src/native/: Cargo.toml
src/native/engine/: Cargo.toml
src/native/engine/src/: lib.rs  watchers.rs  window.rs
src/native/engine/src/process/: exited.rs  mod.rs
src/native/engine/src/window/: closed.rs  foreground.rs  mod.rs
src/native/ffi/: Cargo.toml  build.rs
src/native/ffi/src/: error.rs  expect.rs  lib.rs  option.rs  ptr.rs  result.rs  string.rs  subscription.rs
src/native/ffi/src/windows/: handle.rs  hook.rs  mod.rs  time.rs
src/native/ffi/src/windows/exports/: mod.rs  win32.rs  winrt.rs
src/native/ffi_ext/: Cargo.toml
src/native/ffi_ext/src/: lib.rs  uwp.rs  win32.rs
src/native/proc_macros/: Cargo.toml
src/native/proc_macros/src/: lib.rs
src/native/src/: ffiext.rs  lib.rs  util.rs  watchers.rs  window.rs
src/native/src/info/: mod.rs  process.rs  window.rs
src/native/src/watchers/: foreground_window_watcher.rs  mod.rs
src/native/test_helpers/: Cargo.toml
src/native/test_helpers/src/: event_loop.rs  lib.rs  macro_parts.rs  process.rs  window_closed.rs
src/proto/: main.proto
tests/Cobalt.Tests/: Cobalt.Tests.fsproj  Data.fs  Engine.fs  General.fs  Native.fs
tests/Cobalt.Tests.Benchmarks/: Cobalt.Tests.Benchmarks.csproj  DataBenchmarks.cs  InsertAppBenchmarks.cs  InsertSessionBenchmarks.cs  Program.cs
tests/Cobalt.Tests/Utils/: GeneralUtil.fs  ObservableUtil.fs  ProcessUtil.fs  Util.fs
