[package]
name = "cobalt_engine"
version = "0.1.0"
authors = ["Enigmatrix <enigmatrix2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
uuid-sys = "0.1"
winapi = { version = "0.3", features = ["everything", "impl-default", "impl-debug"] }
ntapi = { version = "0.2", features = ["user", "impl-default"] }
libffi = "0.9.0"

[dependencies.async-std]
version = "1.6.3"
features = ["unstable", "attributes"]
