[package]
name = "native"
version = "0.1.0"
authors = ["Enigmatrix <enigmatrix2000@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "memoryapi", "sysinfoapi", "processthreadsapi", "handleapi"] }
chrono = "0.4"
ntapi = "0.2"
