[package]
name = "engine"
version = "0.1.0"
authors = ["Enigmatrix <enigmatrix2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffi = { path = "../ffi" }
proc_macros = { path = "../proc_macros" }
lazy_static = "1.4.0"
uuid-sys = "0.1"
pelite = "0.8"
