[package]
name = "ffi"
version = "0.1.0"
authors = ["Enigmatrix <enigmatrix2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["everything", "impl-default", "impl-debug"] }
ntapi = { version = "0.2", features = ["user", "impl-default"] }
winrt = "0.7"
widestring = "0.4.2"
regex = "1"

[build-dependencies]
winrt = "0.7.0"
