[package]
name = "test_helpers"
version = "0.1.0"
authors = ["Enigmatrix <enigmatrix2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffi = { path = "../ffi" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
engine = { path = "../engine" }
proc_macros = { path = "../proc_macros" }
